# uc-13-ale

./: .env.example  .gitignore  1st_run.md  Austin_email_guidelines.txt  CHANGELOG.MD  PROJECT_HISTORY.md  README.md  app.yml  financial_trends-2026-06-25.csv  full_report.docx  full_report.md  metadata_enrichment.md  orchestrator_bundle.yaml  package-lock.json  package.json  pending.md  pytest.ini  qs_for_sync.md  retrieval_thoughts.md  tldr_one_pager.docx  tldr_one_pager.md  tldr_one_pager_v2.docx  tldr_one_pager_v2.md  tldr_one_pager_v3.docx  tldr_one_pager_v3.md  tldr_one_pager_v4.docx  tldr_one_pager_v4.md  tldr_one_pager_v5.docx  tldr_one_pager_v5.md  tldr_one_pager_v6.docx  tldr_one_pager_v6.md  to_also_think_about.md  tsconfig.base.json
.dev/: retrieval-layer-review.md  (+8 more)
databricks/: CLAUDE.md  pyproject.toml  requirements.txt
databricks/agents/orchestrator/: __init__.py  bundle_builder.py  confidence.py  constants.py  demo_walkthrough.py  field_mapping.py  formatters.py  ingest.py  orchestrator_bundle.schema.yaml  paths.py  populate.py  renderers.py  tldr_compress.py  tldr_quality_check.py  validate.py
databricks/agents/shared/: _types.py  agent_base.py  retrieval.py  route_chunks.py
databricks/agents/workstreams/: business_model_agent.py  customer_quality_agent.py  financial_trends_agent.py  kpi_agent.py  legal_contracts_agent.py  quality_of_earnings_agent.py
databricks/jobs/notebooks/: 00_setup_vector_search.ipynb  01_document_classifier.ipynb  02_ingestion_parser.ipynb  test_pipeline.ipynb
databricks/workflows/: README.md  uc13_ingestion_pipeline.yml
(+329 files in other folders)
